--- a/jsMind/index.html
+++ b/jsMind/index.html
@@ -55,6 +55,9 @@
     function nodeChildren(){
         console.log(selectedNode);
     }
+    jsMind.util.dom.add_event(jm.view.e_editor, 'input', function (e) {
+        console.log(123)
+    });
 </script>
 </body>
 </html>
