--- a/jQuery/js保存pdf文件/index.html
+++ b/jQuery/js保存pdf文件/index.html
@@ -1,22 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>jspdf演示</title>
+
+    <!-- Bootstrap -->
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
+    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!--[if lt IE 9]>
+    <script src="../bootstrap/js/html5shiv.min.js"></script>
+    <script src="../bootstrap/js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-<div id="fromHTMLtestdiv">
-    <p>123</p>
-    <p>张三</p>
-    <img src="../custom/img/logo.png">
+<div class="container-fluid" id="fromHTMLtestdiv">
+    <h1>标题1</h1>
+    <p>内容1</p>
+    <p>
+        <img src="../img/img.jpg" width="300">
+    </p>
+    <button type="button" class="btn btn-primary" onclick="demoFromHTML()">下载</button>
 </div>
-<button type="button" onclick="demoFromHTML()">下载pdf</button>
 
-<script src="../common/bootstrap/js/jquery.min.js"></script>
+<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+<script src="../bootstrap/js/jquery.min.js"></script>
+<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+<script src="../bootstrap/js/bootstrap.min.js"></script>
 <script src="jspdf.min.js"></script>
 <script>
     function demoFromHTML() {
-        var pdf = new jsPDF('p', 'pt', 'letter')
+        var pdf = new jsPDF('p', 'pt', '微软雅黑')
 
             // source can be HTML-formatted string, or a reference
             // to an actual DOM element from which the text will be scraped.
