--- a/jQuery/js保存pdf文件/index.html
+++ b/jQuery/js保存pdf文件/index.html
@@ -38,7 +38,7 @@
 <script src="font.js"></script>
 <script>
     function a() {
-        var pdf = new jsPDF('p', 'pt', 'a4')
+        var pdf = new jsPDF('p', 'px', 'a4')
         console.log(pdf.getFontList());
     }
 
@@ -47,7 +47,7 @@
     })
 
     function demoFromHTML() {
-        var pdf = new jsPDF('p', 'pt', 'a4')
+        var pdf = new jsPDF('p', 'px', 'a4')
 
 // source can be HTML-formatted string, or a reference
 // to an actual DOM element from which the text will be scraped.
@@ -72,7 +72,6 @@
         pdf.addFileToVFS("shnormal.ttf", shnormal);
         pdf.addFont('shnormal.ttf', 'shnormal', 'normal');
         pdf.setFont("shnormal");
-        pdf.setFontType("normal");
         // ===============================
         // pdf.text("唐嫣", 10, 10);
         margins = {
@@ -83,21 +82,24 @@
         };
         // all coords and widths are in jsPDF instance's declared units
         // 'inches' in this case
-        pdf.fromHTML(
-            source // HTML string or DOM elem ref.
-            , margins.left // x coord
-            , margins.top // y coord
-            , {
-                'width': margins.width // max width of content on PDF
-                , 'elementHandlers': specialElementHandlers
-            },
-            function (dispose) {
-                // dispose: object with X, Y of the last line add to the PDF
-                //          this allow the insertion of new lines after html
-                pdf.save('Test.pdf');
-            },
-            margins
-        )
+        // pdf.fromHTML(
+        //     source // HTML string or DOM elem ref.
+        //     , margins.left // x coord
+        //     , margins.top // y coord
+        //     , {
+        //         'width': margins.width // max width of content on PDF
+        //         , 'elementHandlers': specialElementHandlers
+        //     },
+        //     function (dispose) {
+        //         // dispose: object with X, Y of the last line add to the PDF
+        //         //          this allow the insertion of new lines after html
+        //         pdf.save('Test.pdf');
+        //     },
+        //     margins
+        // )
+
+        pdf.html(source)
+        pdf.save('Test.pdf');
     }
 </script>
 </body>
