--- a/jQuery/js保存pdf文件/index.html
+++ b/jQuery/js保存pdf文件/index.html
@@ -69,9 +69,9 @@
             }
         }
         // ===============================  设置字体
-        pdf.addFileToVFS("shnormal.ttf", shnormal);
-        pdf.addFont('shnormal.ttf', 'shnormal', 'normal');
-        pdf.setFont("shnormal");
+        // pdf.addFileToVFS("shnormal.ttf", shnormal);
+        // pdf.addFont('shnormal.ttf', 'shnormal', 'normal');
+        // pdf.setFont("shnormal");
         // ===============================
         // pdf.text("唐嫣", 10, 10);
         margins = {
@@ -82,24 +82,21 @@
         };
         // all coords and widths are in jsPDF instance's declared units
         // 'inches' in this case
-        // pdf.fromHTML(
-        //     source // HTML string or DOM elem ref.
-        //     , margins.left // x coord
-        //     , margins.top // y coord
-        //     , {
-        //         'width': margins.width // max width of content on PDF
-        //         , 'elementHandlers': specialElementHandlers
-        //     },
-        //     function (dispose) {
-        //         // dispose: object with X, Y of the last line add to the PDF
-        //         //          this allow the insertion of new lines after html
-        //         pdf.save('Test.pdf');
-        //     },
-        //     margins
-        // )
-
-        pdf.html(source)
-        pdf.save('Test.pdf');
+        pdf.fromHTML(
+            source // HTML string or DOM elem ref.
+            , margins.left // x coord
+            , margins.top // y coord
+            , {
+                'width': margins.width // max width of content on PDF
+                , 'elementHandlers': specialElementHandlers
+            },
+            function (dispose) {
+                // dispose: object with X, Y of the last line add to the PDF
+                //          this allow the insertion of new lines after html
+                pdf.save('Test.pdf');
+            },
+            margins
+        )
     }
 </script>
 </body>
